# paraguay-tax-automation

./: .env.example  .gitignore  CLAUDE.md  README.md  RELEASE_NOTES.md  TESTING.md  captcha_solver.py  config.py  crypto.py  file_taxes.py  fix_menu.py  http_client.py  install.sh  notifications.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_integration_mockup.py  update.sh  utils.py
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/skills/release-notes-generator/: SKILL.md
.github/skills/test-docs-generator/: SKILL.md
.github/workflows/: ci.yml
__mockup__/: README.md
__mockup__/eset/: authenticate.html  crear.html  gestionComprobantesVirtuales.do.html  index.html  presentar.json  recibirDDJJContribuyente.do.html
__mockup__/eset/declaracion/: permite.json
__mockup__/eset/gdi/: presentacionTalonResumen.do.html
__mockup__/eset/gdi/di/gestion/: listarTiposOperaciones.json
__mockup__/eset/gdi/di/talonresumen/: procesarTalon.json
__mockup__/eset/perfil/: informacionControlesPerfil.json  menu.json  publico.json  vencimientos.json
forms/: __init__.py  base.py  form_211.py  form_955.py  porcentajes.py  registro.py
tests/: README.md  __init__.py  conftest.py  test_form_211.py  test_form_955.py  test_integration_mockup.py  test_porcentajes.py  test_registro.py
