[tool.poetry]
name = "parayguay-tax-automation"
version = "1.0.0"
description = "Automated tax filing system for Paraguay tax residents"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
keywords = ["taxes", "paraguay", "automation", "marangatu"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
pycryptodomex = "^3.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
